debugging assess connectivity

--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -2,135 +2,118 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Reach:\n",
-    "    def __init__(self, id, value) -> None:\n",
-    "        self.id = id\n",
-    "        self.value = value\n",
-    "\n",
-    "    def __str__(self) -> str:\n",
-    "        return f\"Reach: {self.id}, Value: {self.value}\"\n",
-    "\n",
-    "class System:\n",
-    "    def __init__(self):\n",
-    "        self.reaches = {}\n",
-    "\n",
-    "    def add_reach(self, reach):\n",
-    "        self.reaches[reach.id] = reach\n",
-    "\n",
-    "    def change_value(self, reach_id, value):\n",
-    "        self.reaches[reach_id].value = value"
+    "from topagnps2cche1d.network import Node, Reach, System"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reach: 1, Value: hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reach1 = Reach(id=1, value='hello')\n",
-    "print(reach1)"
+    "s = System()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = System()\n",
-    "\n",
+    "reach1 = Reach(id=1)\n",
+    "reach2 = Reach(id=2, receiving_reach_id=1)\n",
+    "reach3 = Reach(id=3, receiving_reach_id=2)\n",
+    "reach4 = Reach(id=4, receiving_reach_id=2)\n",
+    "reach5 = Reach(id=5, receiving_reach_id=1)\n",
+    "reach6 = Reach(id=6, receiving_reach_id=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s.add_reach(reach1)\n",
-    "s.change_value(reach_id=1, value='bye')"
+    "s.add_reach(reach2)\n",
+    "s.add_reach(reach3)\n",
+    "s.add_reach(reach4)\n",
+    "s.add_reach(reach5)\n",
+    "s.add_reach(reach6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "L = [1,1,None]"
+    "# reach2.include_reach()\n",
+    "reach2.ignore_reach()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: [2, 3], 2: [4, 5]}"
+       "{2: [3, 4], 1: [5], 3: [6]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = {1:[2,3], 2:[4,5]}"
+    "s.assess_connectivity()\n",
+    "s.connectivity_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "OUTPUT = []\n",
-    "for x in A.values():\n",
-    "    OUTPUT.extend(x)\n",
-    "\n",
-    "print(OUTPUT)"
+    "s.assign_strahler_number_to_reaches()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reach6.strahler_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4, 5]"
+       "1"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "max(A.values())"
+    "s.find_root_reach()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
