--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from topagnps2cche1d.network import Node, Reach, System"
+    "from topagnps2cche1d import Node, Reach, Watershed"
    ]
   },
   {
@@ -15,26 +15,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = System()"
+    "s = Watershed()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "reach1 = Reach(id=1)\n",
     "reach2 = Reach(id=2, receiving_reach_id=1)\n",
-    "reach3 = Reach(id=3, receiving_reach_id=2)\n",
-    "reach4 = Reach(id=4, receiving_reach_id=2)\n",
-    "reach5 = Reach(id=5, receiving_reach_id=1)\n",
-    "reach6 = Reach(id=6, receiving_reach_id=3)"
+    "reach3 = Reach(id=3, receiving_reach_id=5)\n",
+    "reach4 = Reach(id=4, receiving_reach_id=5)\n",
+    "reach5 = Reach(id=5, receiving_reach_id=9)\n",
+    "reach6 = Reach(id=6, receiving_reach_id=8)\n",
+    "reach7 = Reach(id=7, receiving_reach_id=8)\n",
+    "reach8 = Reach(id=8, receiving_reach_id=9)\n",
+    "reach9 = Reach(id=9, receiving_reach_id=1)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,76 +47,205 @@
     "s.add_reach(reach3)\n",
     "s.add_reach(reach4)\n",
     "s.add_reach(reach5)\n",
-    "s.add_reach(reach6)"
+    "s.add_reach(reach6)\n",
+    "s.add_reach(reach6)\n",
+    "s.add_reach(reach7)\n",
+    "s.add_reach(reach8)\n",
+    "s.add_reach(reach9)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reach2.include_reach()\n",
-    "reach2.ignore_reach()"
+    "s.keep_all_reaches()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_connectivity_dict = s.update_connectivity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{2: [3, 4], 1: [5], 3: [6]}"
+       "{1: [2, 9], 5: [3, 4], 9: [5, 8], 8: [6, 7]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.assess_connectivity()\n",
-    "s.connectivity_dict"
+    "current_connectivity_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.assign_strahler_number_to_reaches()"
+    "s.assign_strahler_number_to_reaches(mode='fully_connected')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reach6.strahler_number"
+    "s.ignore_reaches_with_strahler_leq(strahler_threshold=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "{1: [9], 5: [], 9: [5, 8], 8: []}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.find_root_reach()"
+    "s.update_connectivity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strahler number for reach (1): 3 / Reach Ignore: False\n",
+      "Strahler number for reach (2): 1 / Reach Ignore: False\n",
+      "Strahler number for reach (3): 1 / Reach Ignore: False\n",
+      "Strahler number for reach (4): 1 / Reach Ignore: False\n",
+      "Strahler number for reach (5): 2 / Reach Ignore: False\n",
+      "Strahler number for reach (6): 1 / Reach Ignore: False\n",
+      "Strahler number for reach (7): 1 / Reach Ignore: False\n",
+      "Strahler number for reach (8): 2 / Reach Ignore: False\n",
+      "Strahler number for reach (9): 3 / Reach Ignore: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "reaches = s.reaches\n",
+    "\n",
+    "for reach_id, reach in reaches.items():\n",
+    "    print(f'Strahler number for reach ({reach_id}): {reach.strahler_number} / Reach Ignore: {reach.ignore}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'Reach_ID': [1,2,3,4,5,6,7,8,9], 'Receiving_Reach': [None,1,5,5,9,8,8,9,1]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 nan\n",
+      "2 1.0\n",
+      "3 5.0\n",
+      "4 5.0\n",
+      "5 9.0\n",
+      "6 8.0\n",
+      "7 8.0\n",
+      "8 9.0\n",
+      "9 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in df.itertuples():\n",
+    "    # print(row[])\n",
+    "    print(row.Reach_ID, row.Receiving_Reach)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n",
+      "5.0\n",
+      "6.0\n",
+      "7.0\n",
+      "8.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, row in df.iterrows():\n",
+    "    print(row['Reach_ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = Watershed()\n",
+    "\n"
    ]
   }
  ],
