reformatting notebooks with black

--- a/notebooks_and_scripts/cche1d_viz.ipynb
+++ b/notebooks_and_scripts/cche1d_viz.ipynb
@@ -15,11 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "srcfolder = '../data_inputs/netchanTest_example_cche1d_input_files/'\n",
-    "filepath_nodes = srcfolder + 'netchan_nodes.dat'\n",
-    "filepath_reach = srcfolder + 'netchan_reach.dat'\n",
-    "filepath_csec = srcfolder + 'netchan_csec.dat'\n",
-    "filepath_csprf = srcfolder + 'netchan_csprf.dat'"
+    "srcfolder = \"../data_inputs/netchanTest_example_cche1d_input_files/\"\n",
+    "filepath_nodes = srcfolder + \"netchan_nodes.dat\"\n",
+    "filepath_reach = srcfolder + \"netchan_reach.dat\"\n",
+    "filepath_csec = srcfolder + \"netchan_csec.dat\"\n",
+    "filepath_csprf = srcfolder + \"netchan_csprf.dat\""
    ]
   },
   {
@@ -31,11 +31,19 @@
     "n_strahler = 1\n",
     "step = 400\n",
     "\n",
-    "srcfolder = '../data_outputs/goodwin_creek_1m/cche1d/'\n",
-    "filepath_nodes = srcfolder + f'goodwin_creek_min_strahler_{n_strahler}_step_{step}m_nodes.dat'\n",
-    "filepath_reach = srcfolder + f'goodwin_creek_min_strahler_{n_strahler}_step_{step}m_reach.dat'\n",
-    "filepath_csec = srcfolder + f'goodwin_creek_min_strahler_{n_strahler}_step_{step}m_csec.dat'\n",
-    "filepath_csprf = srcfolder + f'goodwin_creek_min_strahler_{n_strahler}_step_{step}m_csprf.dat'"
+    "srcfolder = \"../data_outputs/goodwin_creek_1m/cche1d/\"\n",
+    "filepath_nodes = (\n",
+    "    srcfolder + f\"goodwin_creek_min_strahler_{n_strahler}_step_{step}m_nodes.dat\"\n",
+    ")\n",
+    "filepath_reach = (\n",
+    "    srcfolder + f\"goodwin_creek_min_strahler_{n_strahler}_step_{step}m_reach.dat\"\n",
+    ")\n",
+    "filepath_csec = (\n",
+    "    srcfolder + f\"goodwin_creek_min_strahler_{n_strahler}_step_{step}m_csec.dat\"\n",
+    ")\n",
+    "filepath_csprf = (\n",
+    "    srcfolder + f\"goodwin_creek_min_strahler_{n_strahler}_step_{step}m_csprf.dat\"\n",
+    ")"
    ]
   },
   {
@@ -62395,8 +62403,8 @@
    "source": [
     "df_nodes = t2c.read_cche1d_nodes_dat(filepath_nodes)\n",
     "df_reach = t2c.read_cche1d_reach_dat(filepath_reach)\n",
-    "df_csec  = t2c.read_cche1d_dat_file(filepath_csec)\n",
-    "df_csprf  = t2c.read_cche1d_dat_file(filepath_csprf)\n",
+    "df_csec = t2c.read_cche1d_dat_file(filepath_csec)\n",
+    "df_csprf = t2c.read_cche1d_dat_file(filepath_csprf)\n",
     "\n",
     "fig1 = t2c.visualize_cche1d_nodes(df_nodes, text=\"ND_ID\", show=False)\n",
     "fig2 = t2c.visualize_cche1d_nodes(df_nodes, text=\"ND_TYPE\", show=False)\n",
