--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -37,10 +37,10 @@
    "source": [
     "G = nx.DiGraph()\n",
     "\n",
-    "edges = [[2,1], [9,1], [5,9], [8,9], [6,8], [7,8], [3,5], [4,5]]\n",
+    "edges = [[2, 1], [9, 1], [5, 9], [8, 9], [6, 8], [7, 8], [3, 5], [4, 5]]\n",
     "\n",
-    "pos = {edge[0]: (edge[1], edge[1]+edge[0]) for edge in edges}\n",
-    "pos[1] = (1,0)\n",
+    "pos = {edge[0]: (edge[1], edge[1] + edge[0]) for edge in edges}\n",
+    "pos[1] = (1, 0)\n",
     "\n",
     "G.add_edges_from(edges)\n",
     "\n",
