--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -18,8 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_reaches = Path('../data_inputs/goodwin_creek_1m/AnnAGNPS_Reach_Data_Section.csv')\n",
-    "path_to_agflow_reaches = Path('../data_inputs/goodwin_creek_1m/AgFlow_Reach_Data.csv')"
+    "path_to_reaches = Path(\n",
+    "    \"../data_inputs/goodwin_creek_1m/AnnAGNPS_Reach_Data_Section.csv\"\n",
+    ")\n",
+    "path_to_agflow_reaches = Path(\"../data_inputs/goodwin_creek_1m/AgFlow_Reach_Data.csv\")"
    ]
   },
   {
