--- a/notebooks_and_scripts/top2cche1d_notebook.ipynb
+++ b/notebooks_and_scripts/top2cche1d_notebook.ipynb
@@ -70,14 +70,14 @@
    "outputs": [],
    "source": [
     "# Main Folder\n",
-    "srcfolder = '../data_inputs/topagnps_ohio_files/'\n",
+    "srcfolder = \"../data_inputs/topagnps_ohio_files/\"\n",
     "\n",
     "# File names\n",
-    "filepath_annagnps_reach_ids = srcfolder + 'AnnAGNPS_Reach_IDs.asc'\n",
-    "filepath_agflow = srcfolder + 'AgFlow_Reach_Data.csv'\n",
+    "filepath_annagnps_reach_ids = srcfolder + \"AnnAGNPS_Reach_IDs.asc\"\n",
+    "filepath_agflow = srcfolder + \"AgFlow_Reach_Data.csv\"\n",
     "# filepath_flovec = srcfolder + 'FLOVEC.asc'\n",
-    "filepath_netw = srcfolder + 'NETW.asc'\n",
-    "filepath_dednm = srcfolder + 'DEDNM.asc'"
+    "filepath_netw = srcfolder + \"NETW.asc\"\n",
+    "filepath_dednm = srcfolder + \"DEDNM.asc\""
    ]
   },
   {
@@ -99,7 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, geoMatrix, ncols, nrows, nodataval, dataset = t2c.read_esri_asc_file(filepath_annagnps_reach_ids)"
+    "img, geoMatrix, ncols, nrows, nodataval, dataset = t2c.read_esri_asc_file(\n",
+    "    filepath_annagnps_reach_ids\n",
+    ")"
    ]
   },
   {
@@ -128,8 +130,12 @@
     "rowinput, colinput = 83, 464\n",
     "truelat, truelon = 4476008.33, 717164.897\n",
     "\n",
-    "latcalc, loncalc = t2c.rowcol2latlon_esri_asc(geoMatrix, rowinput, colinput, oneindexed=True)\n",
-    "print(f\"(row, col) = ({rowinput}, {colinput}) maps to ({latcalc}, {loncalc}); Error: calc-true = ({latcalc-truelat}, {loncalc-truelon})\")"
+    "latcalc, loncalc = t2c.rowcol2latlon_esri_asc(\n",
+    "    geoMatrix, rowinput, colinput, oneindexed=True\n",
+    ")\n",
+    "print(\n",
+    "    f\"(row, col) = ({rowinput}, {colinput}) maps to ({latcalc}, {loncalc}); Error: calc-true = ({latcalc-truelat}, {loncalc-truelon})\"\n",
+    ")"
    ]
   },
   {
@@ -146,7 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = t2c.visualize_reaches_id(img, geoMatrix, title='Initial Reach IDs', renderer='browser')"
+    "fig = t2c.visualize_reaches_id(\n",
+    "    img, geoMatrix, title=\"Initial Reach IDs\", renderer=\"browser\"\n",
+    ")"
    ]
   },
   {
@@ -513,8 +521,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_strahler, geoMatrix, _, _, _, _, = t2c.read_esri_asc_file(filepath_netw)\n",
-    "fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer='browser')"
+    "(\n",
+    "    img_strahler,\n",
+    "    geoMatrix,\n",
+    "    _,\n",
+    "    _,\n",
+    "    _,\n",
+    "    _,\n",
+    ") = t2c.read_esri_asc_file(filepath_netw)\n",
+    "fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer=\"browser\")"
    ]
   },
   {
@@ -1441,13 +1456,20 @@
     }
    ],
    "source": [
-    "default_xsection = {'type' : 'default',\n",
-    "                    'CP_Ws': [-43, -35, -13, -10, 10, 13, 35, 43],\n",
-    "                    'CP_Zs': [6, 2, 2, 0, 0, 2, 2, 6],\n",
-    "                    'CP_RGHs': [0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025]}\n",
+    "default_xsection = {\n",
+    "    \"type\": \"default\",\n",
+    "    \"CP_Ws\": [-43, -35, -13, -10, 10, 13, 35, 43],\n",
+    "    \"CP_Zs\": [6, 2, 2, 0, 0, 2, 2, 6],\n",
+    "    \"CP_RGHs\": [0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025],\n",
+    "}\n",
     "\n",
-    "fig = px.line(x = default_xsection['CP_Ws'], y = default_xsection['CP_Zs'], markers='o', title = 'Default Cross-Section')\n",
-    "fig.update_layout(xaxis_title='x (m)', yaxis_title='y (m)')\n",
+    "fig = px.line(\n",
+    "    x=default_xsection[\"CP_Ws\"],\n",
+    "    y=default_xsection[\"CP_Zs\"],\n",
+    "    markers=\"o\",\n",
+    "    title=\"Default Cross-Section\",\n",
+    ")\n",
+    "fig.update_layout(xaxis_title=\"x (m)\", yaxis_title=\"y (m)\")\n",
     "fig.show()"
    ]
   },
@@ -1460,7 +1482,23 @@
     "distance = 50\n",
     "min_strahler = 1\n",
     "# df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_flovec, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)\n",
-    "df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach, cche1d_to_annagnps_reaches = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)"
+    "(\n",
+    "    df_nodes,\n",
+    "    df_channel,\n",
+    "    df_link,\n",
+    "    df_reach,\n",
+    "    df_csec,\n",
+    "    df_csprf,\n",
+    "    img_reach,\n",
+    "    cche1d_to_annagnps_reaches,\n",
+    ") = t2c.convert_topagnps_output_to_cche1d_input(\n",
+    "    filepath_agflow,\n",
+    "    filepath_annagnps_reach_ids,\n",
+    "    filepath_netw,\n",
+    "    default_xsection,\n",
+    "    min_strahler,\n",
+    "    distance,\n",
+    ")"
    ]
   },
   {
@@ -1487,7 +1525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = t2c.visualize_cche1d_nodes(df_nodes, renderer='browser')"
+    "fig = t2c.visualize_cche1d_nodes(df_nodes, renderer=\"browser\")"
    ]
   },
   {
@@ -1504,8 +1542,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputfolder = '../input_data/topagnps_ohio_files/top2cche1d_outputs/' # Location to write the files\n",
-    "casename = 'ohio' # Name of the case for these files"
+    "outputfolder = \"../input_data/topagnps_ohio_files/top2cche1d_outputs/\"  # Location to write the files\n",
+    "casename = \"ohio\"  # Name of the case for these files"
    ]
   },
   {
@@ -1527,12 +1565,24 @@
     }
    ],
    "source": [
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_nodes)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_channel)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_link)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_reach)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_csec)\n",
-    "t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}', df_csprf)"
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_nodes\n",
+    ")\n",
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_channel\n",
+    ")\n",
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_link\n",
+    ")\n",
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_reach\n",
+    ")\n",
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_csec\n",
+    ")\n",
+    "t2c.write_cche1d_dat_file(\n",
+    "    f\"{outputfolder}{casename}_min_strahler_{min_strahler}\", df_csprf\n",
+    ")"
    ]
   },
   {
