--- a/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
+++ b/notebooks_and_scripts/top2cche1d_goodwin_creek.ipynb
@@ -71,14 +71,14 @@
    "source": [
     "# Main Folder\n",
     "# srcfolder = '../input_data/goodwin_creek_files/'\n",
-    "srcfolder = '../data_inputs/goodwin_creek_1m/'\n",
+    "srcfolder = \"../data_inputs/goodwin_creek_1m/\"\n",
     "\n",
     "# File names\n",
-    "filepath_annagnps_reach_ids = srcfolder + 'AnnAGNPS_Reach_IDs.asc'\n",
-    "filepath_agflow = srcfolder + 'AgFlow_Reach_Data.csv'\n",
-    "filepath_flovec = srcfolder + 'FLOVEC.asc'\n",
-    "filepath_netw = srcfolder + 'NETW.asc'\n",
-    "filepath_dednm = srcfolder + 'RELIEF.asc'\n",
+    "filepath_annagnps_reach_ids = srcfolder + \"AnnAGNPS_Reach_IDs.asc\"\n",
+    "filepath_agflow = srcfolder + \"AgFlow_Reach_Data.csv\"\n",
+    "filepath_flovec = srcfolder + \"FLOVEC.asc\"\n",
+    "filepath_netw = srcfolder + \"NETW.asc\"\n",
+    "filepath_dednm = srcfolder + \"RELIEF.asc\"\n",
     "\n",
     "visualize = False\n",
     "write_files = True"
@@ -103,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, geoMatrix, ncols, nrows, nodataval, dataset = t2c.read_esri_asc_file(filepath_annagnps_reach_ids)"
+    "img, geoMatrix, ncols, nrows, nodataval, dataset = t2c.read_esri_asc_file(\n",
+    "    filepath_annagnps_reach_ids\n",
+    ")"
    ]
   },
   {
@@ -327,10 +329,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_strahler, geoMatrix, _, _, _, _, = t2c.read_esri_asc_file(filepath_netw)\n",
+    "(\n",
+    "    img_strahler,\n",
+    "    geoMatrix,\n",
+    "    _,\n",
+    "    _,\n",
+    "    _,\n",
+    "    _,\n",
+    ") = t2c.read_esri_asc_file(filepath_netw)\n",
     "\n",
     "if visualize:\n",
-    "    fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer='browser')"
+    "    fig = t2c.visualize_strahler_number(img_strahler, geoMatrix, renderer=\"browser\")"
    ]
   },
   {
@@ -1257,13 +1266,20 @@
     }
    ],
    "source": [
-    "default_xsection = {'type' : 'default',\n",
-    "                    'CP_Ws': [-43, -35, -13, -10, 10, 13, 35, 43],\n",
-    "                    'CP_Zs': [6, 2, 2, 0, 0, 2, 2, 6],\n",
-    "                    'CP_RGHs': [0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025]}\n",
+    "default_xsection = {\n",
+    "    \"type\": \"default\",\n",
+    "    \"CP_Ws\": [-43, -35, -13, -10, 10, 13, 35, 43],\n",
+    "    \"CP_Zs\": [6, 2, 2, 0, 0, 2, 2, 6],\n",
+    "    \"CP_RGHs\": [0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025, 0.025],\n",
+    "}\n",
     "\n",
-    "fig = px.line(x = default_xsection['CP_Ws'], y = default_xsection['CP_Zs'], markers='o', title = 'Default Cross-Section')\n",
-    "fig.update_layout(xaxis_title='x (m)', yaxis_title='y (m)')\n",
+    "fig = px.line(\n",
+    "    x=default_xsection[\"CP_Ws\"],\n",
+    "    y=default_xsection[\"CP_Zs\"],\n",
+    "    markers=\"o\",\n",
+    "    title=\"Default Cross-Section\",\n",
+    ")\n",
+    "fig.update_layout(xaxis_title=\"x (m)\", yaxis_title=\"y (m)\")\n",
     "fig.show()"
    ]
   },
@@ -1276,7 +1292,23 @@
     "distance = 400\n",
     "min_strahler = 1\n",
     "# df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_flovec, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)\n",
-    "df_nodes, df_channel, df_link, df_reach, df_csec, df_csprf, img_reach, cche1d_to_annagnps_reaches = t2c.convert_topagnps_output_to_cche1d_input(filepath_agflow, filepath_annagnps_reach_ids, filepath_netw, default_xsection, min_strahler, distance)"
+    "(\n",
+    "    df_nodes,\n",
+    "    df_channel,\n",
+    "    df_link,\n",
+    "    df_reach,\n",
+    "    df_csec,\n",
+    "    df_csprf,\n",
+    "    img_reach,\n",
+    "    cche1d_to_annagnps_reaches,\n",
+    ") = t2c.convert_topagnps_output_to_cche1d_input(\n",
+    "    filepath_agflow,\n",
+    "    filepath_annagnps_reach_ids,\n",
+    "    filepath_netw,\n",
+    "    default_xsection,\n",
+    "    min_strahler,\n",
+    "    distance,\n",
+    ")"
    ]
   },
   {
@@ -1296,7 +1328,9 @@
    "source": [
     "visualize = False\n",
     "if visualize:\n",
-    "    fig = t2c.visualize_reaches_id(img_reach, geoMatrix, title='New Reach IDs', renderer='browser')"
+    "    fig = t2c.visualize_reaches_id(\n",
+    "        img_reach, geoMatrix, title=\"New Reach IDs\", renderer=\"browser\"\n",
+    "    )"
    ]
   },
   {
@@ -1478,7 +1512,7 @@
    "source": [
     "visualize = False\n",
     "if visualize:\n",
-    "    fig = t2c.visualize_cche1d_nodes(df_nodes, renderer='browser')"
+    "    fig = t2c.visualize_cche1d_nodes(df_nodes, renderer=\"browser\")"
    ]
   },
   {
@@ -1495,8 +1529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputfolder = '../data_outputs/goodwin_creek_1m/cche1d/' # Location to write the files\n",
-    "casename = 'goodwin_creek' # Name of the case for these files"
+    "outputfolder = \"../data_outputs/goodwin_creek_1m/cche1d/\"  # Location to write the files\n",
+    "casename = \"goodwin_creek\"  # Name of the case for these files"
    ]
   },
   {
@@ -1519,12 +1553,30 @@
    ],
    "source": [
     "if write_files:\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_nodes)\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_channel)\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_link)\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_reach)\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csec)\n",
-    "    t2c.write_cche1d_dat_file(f'{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m', df_csprf)"
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_nodes,\n",
+    "    )\n",
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_channel,\n",
+    "    )\n",
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_link,\n",
+    "    )\n",
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_reach,\n",
+    "    )\n",
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_csec,\n",
+    "    )\n",
+    "    t2c.write_cche1d_dat_file(\n",
+    "        f\"{outputfolder}{casename}_min_strahler_{min_strahler}_step_{distance}m\",\n",
+    "        df_csprf,\n",
+    "    )"
    ]
   },
   {
@@ -1534,7 +1586,10 @@
    "outputs": [],
    "source": [
     "if write_files:\n",
-    "    cche1d_to_annagnps_reaches.to_csv(f'{outputfolder}/{casename}_cche1d_annagnps_reach_equivalent_sources_min_strahler_{min_strahler}_step_{distance}m.csv', index=False)"
+    "    cche1d_to_annagnps_reaches.to_csv(\n",
+    "        f\"{outputfolder}/{casename}_cche1d_annagnps_reach_equivalent_sources_min_strahler_{min_strahler}_step_{distance}m.csv\",\n",
+    "        index=False,\n",
+    "    )"
    ]
   }
  ],
