Populating reaches with raster nodes (untested)

--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,22 +53,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from topagnps2cche1d.tools import get_intermediate_nodes_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "[(0, 1), (3, 4)]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5 in G.predecessors(9)"
+    "I = np.array(\n",
+    "    [\n",
+    "        [0, 1, 0, 0, 0],\n",
+    "        [0, 0, 1, 0, 0],\n",
+    "        [0, 0, 1, 0, 0],\n",
+    "        [0, 0, 0, 1, 1],\n",
+    "        [0, 0, 0, 0, 0],\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def find_extremities_binary(img, output_index_starts_one=False):\n",
+    "    # Find row and column locations that are non-zero\n",
+    "    (rows, cols) = np.nonzero(img)\n",
+    "\n",
+    "    # Initialize empty list of coordinates\n",
+    "    extremities = []\n",
+    "\n",
+    "    # For each non-zero pixel...\n",
+    "    for r, c in zip(rows, cols):\n",
+    "        # Check if the current pixel is nonzero\n",
+    "        if img[r, c] == 1:\n",
+    "            # Extract an 8-connected neighborhood\n",
+    "            neighborhood = img[\n",
+    "                max(r - 1, 0) : min(r + 2, img.shape[0]),\n",
+    "                max(c - 1, 0) : min(c + 2, img.shape[1]),\n",
+    "            ]\n",
+    "\n",
+    "            # Count the nonzero pixels in the neighborhood\n",
+    "            num_nonzero = np.sum(neighborhood)\n",
+    "\n",
+    "            # If the reach is a single pixel or more we append\n",
+    "            if output_index_starts_one:\n",
+    "                r += 1\n",
+    "                c += 1\n",
+    "\n",
+    "            if num_nonzero <= 2:\n",
+    "                extremities.append((r, c))\n",
+    "\n",
+    "    return extremities\n",
+    "\n",
+    "\n",
+    "extremities = find_extremities_binary(I, output_index_starts_one=False)\n",
+    "extremities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1), (1, 2), (2, 2), (3, 3), (3, 4)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ordered_path = get_intermediate_nodes_img(extremities[0], extremities[1], I)\n",
+    "ordered_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (0, 1)\n",
+      "2 (1, 2)\n",
+      "3 (2, 2)\n",
+      "4 (3, 3)\n",
+      "5 (3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, pixel in enumerate(ordered_path, 1):\n",
+    "    print(k, pixel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ordered_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   }
  ],
