--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -18,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_reaches = Path(\n",
-    "    \"../data_inputs/goodwin_creek_1m/AnnAGNPS_Reach_Data_Section.csv\"\n",
-    ")\n",
-    "path_to_agflow_reaches = Path(\"../data_inputs/goodwin_creek_1m/AgFlow_Reach_Data.csv\")"
+    "root_dir = Path(\"../data_inputs/goodwin_creek_1m/\")\n",
+    "path_to_reaches = root_dir / \"AnnAGNPS_Reach_Data_Section.csv\"\n",
+    "path_to_reaches_raster = root_dir / \"AnnAGNPS_Reach_IDs.asc\"\n",
+    "path_to_agflow_reaches = root_dir / \"AgFlow_Reach_Data.csv\""
    ]
   },
   {
@@ -307,445 +307,6 @@
     "    if not v.ignore:\n",
     "        print(v)\n",
     "    # break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_agflow = pd.read_csv(path_to_agflow_reaches, index_col=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Reach_ID</th>\n",
-       "      <th>Upstream_End_Row</th>\n",
-       "      <th>Upstream_End_Column</th>\n",
-       "      <th>Downstream_End_Row</th>\n",
-       "      <th>Downstream_End_Column</th>\n",
-       "      <th>Receiving_Reach</th>\n",
-       "      <th>Drainage_Area_[ha]</th>\n",
-       "      <th>Average_Elevation_[m]</th>\n",
-       "      <th>Reach_Length_[m]</th>\n",
-       "      <th>Distance_Upstream_End_to_Outlet_[m]</th>\n",
-       "      <th>Distance_Downstream_End_to_Outlet_[m]</th>\n",
-       "      <th>Reach_Slope_[m/m]</th>\n",
-       "      <th>Contributing_Cell_ID_Source</th>\n",
-       "      <th>Contributing_Cell_ID_Right</th>\n",
-       "      <th>Contributing_Cell_ID_Left</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6048</td>\n",
-       "      <td>578</td>\n",
-       "      <td>6048</td>\n",
-       "      <td>578</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2135.57</td>\n",
-       "      <td>67.45</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00283</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5978</td>\n",
-       "      <td>761</td>\n",
-       "      <td>6048</td>\n",
-       "      <td>578</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2135.57</td>\n",
-       "      <td>67.45</td>\n",
-       "      <td>247.14</td>\n",
-       "      <td>247.14</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00283</td>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5947</td>\n",
-       "      <td>822</td>\n",
-       "      <td>5978</td>\n",
-       "      <td>762</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2128.12</td>\n",
-       "      <td>67.82</td>\n",
-       "      <td>75.01</td>\n",
-       "      <td>322.15</td>\n",
-       "      <td>247.14</td>\n",
-       "      <td>0.00134</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5861</td>\n",
-       "      <td>859</td>\n",
-       "      <td>5946</td>\n",
-       "      <td>823</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2103.89</td>\n",
-       "      <td>67.94</td>\n",
-       "      <td>103.91</td>\n",
-       "      <td>426.06</td>\n",
-       "      <td>322.15</td>\n",
-       "      <td>0.00097</td>\n",
-       "      <td>0</td>\n",
-       "      <td>42</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5556</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>5860</td>\n",
-       "      <td>859</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2101.50</td>\n",
-       "      <td>68.30</td>\n",
-       "      <td>406.73</td>\n",
-       "      <td>832.79</td>\n",
-       "      <td>426.06</td>\n",
-       "      <td>0.00172</td>\n",
-       "      <td>0</td>\n",
-       "      <td>52</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Reach_ID  Upstream_End_Row  Upstream_End_Column  Downstream_End_Row  \\\n",
-       "0         1              6048                  578                6048   \n",
-       "1         2              5978                  761                6048   \n",
-       "2         3              5947                  822                5978   \n",
-       "3         4              5861                  859                5946   \n",
-       "4         5              5556                 1051                5860   \n",
-       "\n",
-       "   Downstream_End_Column  Receiving_Reach  Drainage_Area_[ha]  \\\n",
-       "0                    578                1             2135.57   \n",
-       "1                    578                1             2135.57   \n",
-       "2                    762                2             2128.12   \n",
-       "3                    823                3             2103.89   \n",
-       "4                    859                4             2101.50   \n",
-       "\n",
-       "   Average_Elevation_[m]  Reach_Length_[m]  \\\n",
-       "0                  67.45              0.00   \n",
-       "1                  67.45            247.14   \n",
-       "2                  67.82             75.01   \n",
-       "3                  67.94            103.91   \n",
-       "4                  68.30            406.73   \n",
-       "\n",
-       "   Distance_Upstream_End_to_Outlet_[m]  Distance_Downstream_End_to_Outlet_[m]  \\\n",
-       "0                                 0.00                                   0.00   \n",
-       "1                               247.14                                   0.00   \n",
-       "2                               322.15                                 247.14   \n",
-       "3                               426.06                                 322.15   \n",
-       "4                               832.79                                 426.06   \n",
-       "\n",
-       "   Reach_Slope_[m/m]  Contributing_Cell_ID_Source  Contributing_Cell_ID_Right  \\\n",
-       "0            0.00283                            0                           0   \n",
-       "1            0.00283                            0                          22   \n",
-       "2            0.00134                            0                          32   \n",
-       "3            0.00097                            0                          42   \n",
-       "4            0.00172                            0                          52   \n",
-       "\n",
-       "   Contributing_Cell_ID_Left  \n",
-       "0                          0  \n",
-       "1                         23  \n",
-       "2                         33  \n",
-       "3                         43  \n",
-       "4                         53  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_agflow.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(path_to_reaches, index_col=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Reach_ID</th>\n",
-       "      <th>Receiving_Reach</th>\n",
-       "      <th>Vegetation_Code</th>\n",
-       "      <th>Elevation</th>\n",
-       "      <th>Slope</th>\n",
-       "      <th>Mannings_n</th>\n",
-       "      <th>Infiltration_Rate</th>\n",
-       "      <th>Hydraulic_Geom_ID</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>Top_Width</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Sand_Scour_Code</th>\n",
-       "      <th>Small_Agg_Scour_Code</th>\n",
-       "      <th>Large_Agg_Scour_Code</th>\n",
-       "      <th>Valley_Clay_Scour_Code</th>\n",
-       "      <th>Valley_Silt_Scour_Code</th>\n",
-       "      <th>Valley_Sand_Scour_Code</th>\n",
-       "      <th>Valley_Small_Agg_Scour_Code</th>\n",
-       "      <th>Valley_Large_Agg_Scour_Code</th>\n",
-       "      <th>Delivery_Ratio</th>\n",
-       "      <th>Input_Units_Code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>OUTLET</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67.45</td>\n",
-       "      <td>0.00283</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67.45</td>\n",
-       "      <td>0.00283</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>247.14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67.82</td>\n",
-       "      <td>0.00134</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>75.01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>67.94</td>\n",
-       "      <td>0.00097</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>103.91</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>68.30</td>\n",
-       "      <td>0.00172</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>406.73</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Reach_ID Receiving_Reach  Vegetation_Code  Elevation    Slope  Mannings_n  \\\n",
-       "0         1          OUTLET              NaN      67.45  0.00283         NaN   \n",
-       "1         2               1              NaN      67.45  0.00283         NaN   \n",
-       "2         3               2              NaN      67.82  0.00134         NaN   \n",
-       "3         4               3              NaN      67.94  0.00097         NaN   \n",
-       "4         5               4              NaN      68.30  0.00172         NaN   \n",
-       "\n",
-       "   Infiltration_Rate  Hydraulic_Geom_ID  Length  Top_Width  ...  \\\n",
-       "0                NaN                NaN    0.00        NaN  ...   \n",
-       "1                NaN                NaN  247.14        NaN  ...   \n",
-       "2                NaN                NaN   75.01        NaN  ...   \n",
-       "3                NaN                NaN  103.91        NaN  ...   \n",
-       "4                NaN                NaN  406.73        NaN  ...   \n",
-       "\n",
-       "   Sand_Scour_Code  Small_Agg_Scour_Code  Large_Agg_Scour_Code  \\\n",
-       "0              NaN                   NaN                   NaN   \n",
-       "1              NaN                   NaN                   NaN   \n",
-       "2              NaN                   NaN                   NaN   \n",
-       "3              NaN                   NaN                   NaN   \n",
-       "4              NaN                   NaN                   NaN   \n",
-       "\n",
-       "   Valley_Clay_Scour_Code  Valley_Silt_Scour_Code  Valley_Sand_Scour_Code  \\\n",
-       "0                     NaN                     NaN                     NaN   \n",
-       "1                     NaN                     NaN                     NaN   \n",
-       "2                     NaN                     NaN                     NaN   \n",
-       "3                     NaN                     NaN                     NaN   \n",
-       "4                     NaN                     NaN                     NaN   \n",
-       "\n",
-       "   Valley_Small_Agg_Scour_Code  Valley_Large_Agg_Scour_Code  Delivery_Ratio  \\\n",
-       "0                          NaN                          NaN             NaN   \n",
-       "1                          NaN                          NaN             NaN   \n",
-       "2                          NaN                          NaN             NaN   \n",
-       "3                          NaN                          NaN             NaN   \n",
-       "4                          NaN                          NaN             NaN   \n",
-       "\n",
-       "   Input_Units_Code  \n",
-       "0                 1  \n",
-       "1                 1  \n",
-       "2                 1  \n",
-       "3                 1  \n",
-       "4                 1  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   }
  ],
